# uvm

./: .gitignore  Cargo.toml  README.md  build.zig  test.asm
.github/workflows/: test.yml
api/: Cargo.toml  opcodes.json  syscalls.json
api/src/: main.rs
doc/: design.md  planning.md  syscalls.md  vision.md
examples/: circle.asm  colors.asm  empty.asm  factorial.asm  fizzbuzz.asm  gradient.asm  line.asm  loop.asm  rects.asm
ncc/: .gitignore  Cargo.toml  README.md  ast.rs  build_and_run.sh  codegen.rs  count_insns.sh  gcc_build_run.sh  main.rs  parser.rs  symbols.rs  types.rs
ncc/examples/: 3dcube.c  LICENSE_OF_EXAMPLES  attackers.c  audio_graph.c  ball.c  basic.c  chess.c  counter.c  crc32.c  fib.c  fill_rect.c  fire.c  gameoflife.c  inthash.c  linkedlist.c  mini_bbs.c  mini_bbs.c.disabled  monogram.c  monogram.py  paint.c  plasma.c  random.c  raycaster.c  raymarcher.c  sawtooth_notes.c  sdbm_hash.c  sequencer.c  snake.c  strings.c  telnet_server.c  telnet_server.c.disabled  textedit.c  thegrid.c  white_noise.c  wu.c  wu_lines.c
ncc/include/: assert.h  ctype.h  math.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
ncc/include/uvm/: 3dmath.h  graphics.h  math.h  music.h  syscalls.h  utils.h  window.h
ncc/src/: ast.rs  casts.rs  codegen.rs  cpp.rs  exec_tests.rs  main.rs  parser.rs  parsing.rs  symbols.rs  typedefs.rs  types.rs
ncc/tests/: 3dmath.c  arrays.c  assign.c  do_while.c  expressions.c  floats.c  graphics.c  int_ops.c  macros.c  malloc.c  math.c  music.c  pointer_add.c  pointers.c  printf.c  regress_assign.c  regress_issue18.c  regress_load.c  regress_struct_align.c  sizeof.c  stack_alloc.c  stdio.c  stdlib.c  strings.c  structs.c  test_macro.c  threads.c  threads_lock.c  typedefs.c  uvm_time.c
ncc/tests/line_nums/: err_after_include.c  err_after_include2.c  err_include_ln3.c  err_include_ln3.h  err_line_1.c  err_line_2.c
spec/: Cargo.toml
src/: asm.rs  audio.rs  display.rs  main.rs  main.zig  syscalls.rs  time.rs  vm.rs  window.rs
vm/: Cargo.toml
vm/examples/: EXAMPLES_LICENSE  circle.asm  colors.asm  empty.asm  factorial.asm  fib.asm  fizzbuzz.asm  gradient.asm  guess.asm  loop.asm  memcpy.asm  rects.asm
vm/src/: asm.rs  audio.rs  constants.rs  host.rs  main.rs  program.rs  syscalls.rs  utils.rs  vm.rs  window.rs
vm/src/sys/: audio.rs  constants.rs  mod.rs  net.rs  time.rs  window.rs
