# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "api"
version = "0.1.0"
authors = ["Maxime Chevalier-Boisvert <maximechevalierb@gmail.com>"]
edition = "2021" # Rust language edition
repository = "https://github.com/maximecb/uvm/"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[[bin]]
name = "api"
path = "src/main.rs"
