# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "uvm"
version = "0.2.0"
edition = "2021"

[dependencies]
sdl2 = "0.37.0"
libc = "0.2" # needed for mmap

[features]
count_insns = []

[profile.dev]
debug = true
opt-level = 1
overflow-checks = true
debug-assertions = true

[profile.release]
debug = false
# Enable all optimizations for maximum performance
opt-level = 3
codegen-units = 1
lto = true
# For now, we leave overflow checks and debug assertions
# enabled in release mode for security reasons
overflow-checks = true
debug-assertions = true
